--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@mui/material": "^5.15.2",
     "bootstrap": "^5.3.2",
-    "next": "14.0.4",
+    "mdb-react-ui-kit": "7.0.0",
+    "next": "^14.1.1",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18",
-    "mdb-react-ui-kit": "7.0.0"
+    "react-dom": "^18"
   }
 }
